--- a/siteplan.html
+++ b/siteplan.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Site Plan for Dry Oar</title>
+    <meta name="description" content="">
 </head>
 
 <body>
@@ -25,29 +25,56 @@
         </ul>
     </nav>
     <main>
-        <section>
+        <section class="item">
             <h1> Site name</h1>
-            <p></p>
+            <p>Dry Oar Rafting Adventure</p>
         </section>
-        <section>
+        <section class="item">
             <h3>Site purpose with goals</h3>
-            <p></p>
+            <p>The purpose of the site is to inform the user of what he could expect on a rafting experience<br>
+                Provide the information of the services we have to offer.<br>
+                Provide the user the necessary information to contact us and shedule a visit.<br>
+                Provide a sneek peek of the experience
+            </p>
         </section>
-        <section>
+        <section class="item">
             <h3>Target audience</h3>
-            <p></p>
+            <p>
+            <ul>
+                <li>Young users between 18 - 25 who are looking for a unique extreme experience.</li>
+                <li>Users that have a medium high social level income who can allocate part of their income<br>
+                    to spend their free time enjoying the majesty of nature. </li>
+                <li> Users that are students , they have more time to invest than other professions.</li>
+                <li>Very sociable people, who like to spend their free time with their friends and family</li>
+                <li>People who like extreme sports or activities that include adrenaline, movement, agility and
+                    dexterity.</li>
+            </ul>
+            </p>
         </section>
-        <section>
+        <section class="item">
             <h3>Logo</h3>
-            <p> <img> </p>
+            <p> <img src="images/raftinglogo.jpg" alt="The Rafting Logo"> </p>
         </section>
-        <section>
+        <section class="item">
             <h3> Color scheme</h3>
-            <p> </p>
+            <p>
+                <!-- Coolors Palette Widget -->
+                <script src="https://coolors.co/palette-widget/widget.js"></script>
+                <script
+                    data-id="08011336162744049">new CoolorsPaletteWidget("08011336162744049", ["fcfcf6", "fbef29", "e97417", "018fdd", "2b136d"]); </script>
+
+            </p>
         </section>
-        <section>
+        <section class="item">
             <h3> Typography</h3>
-            <p></p>
+            <p>
+                <ul>
+                    <li> h1,h2,h3: font-family: 'Cabin', sans-serif;</li>
+                    <li>paragraph text font-family: 'Montserrat', sans-serif;</li>
+                    <li>Site header, primary navigation, footer navigation font-family: 'Road Rage', cursive;</li>
+                </ul>
+        
+            </p>
         </section>
     </main>
     <footer></footer>
