--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li>Watch Series </li>
         <li> Go for a walk </li>
     </ul>
+    <ul>
+       <li><a href="siteplan.html">Site plan</a></li>
+    </ul>
 </body>
 
 </html>
