--- a/week3/index.html
+++ b/week3/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="logo image">
             <picture>
-                <img src="C:\Users\arima\OneDrive\Escritorio\WDD130 CLASS\wdd130\images/100/100" alt="Placeholder image for description" />
+                <img src="rafinlogo.png" alt="Rafting Logo" />
             </picture>
         </div>
         <nav>
@@ -27,7 +27,10 @@
     </header>
 
     <main>
-
+        <div class="river pic">
+            <picture>
+                <img src="https://placeimg.com/320/240/nature/960/200" alt="Placeholder image for description">
+            </picture>
     </main>
 
     <footer>
