--- a/week3/index.html
+++ b/week3/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The purpose of this assignment is to begin the development of the rafting project site by starting with the home page.">
-    <title>Rafting Project Site Home Page</title>
+    <meta name="description"
+        content="Looking for some adrenaline on your life? You are on the correct place!. We offer you that and more, come and see it by yourself!">
+
+    <title>Dry Oar Rafting Adventure</title>
 </head>
 
 <body>
-    
+
     <header>
         <div class="logo image">
             <picture>
@@ -29,13 +32,54 @@
     <main>
         <div class="river pic">
             <picture>
-                <img src="https://placeimg.com/320/240/nature/960/200" alt="Placeholder image for description">
+                <img src="https://placekitten.com/960/200" alt="Placeholder image" />
             </picture>
+            </div>
+            <section>
+                <h1>Title</h1>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                    <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat.
+                    <br> aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                    pariatur. Excepteur sint occaecat cupidatat non proident,
+                    <br> sunt in culpa qui officia deserunt mollit anim id est laborum."
+                </p>
+                <img src="https://placekitten.com/300/200" alt="Placeholder image" />
+            </section>
+            <section>
+                <h2>Title</h2>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                    <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat.
+                    <br> aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                    pariatur. Excepteur sint occaecat cupidatat non proident,
+                    <br> sunt in culpa qui officia deserunt mollit anim id est laborum."
+                </p>
+                <img src="https://placekitten.com/300/200" alt="Placeholder image" />
+            </section>
+            <section>
+                <h3>Title</h3>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua.
+                    <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat.
+            </section>
     </main>
 
     <footer>
+        <div>
+            <p>© 2022 Ariana Manley WDD130</p>
+        </div>
+        <div>
+            <a href="https://facebook.com>"><img src="https://placekitten.com/50/50" alt="Fcebook icon"></a>
+            <a href="https://instagram.com>"><img src="https://placekitten.com/50/50" alt="instagram icon"></a>
+            <a href="https://whatsapp.com>"><img src="https://placekitten.com/50/50" alt="whatsapp icon"></a>
 
+        </div>
     </footer>
 
 </body>
+
 </html>
