--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>
     <ul>
        <li><a href="siteplan.html">Site plan</a></li>
-       <li><a href="week3/">Site plan</a></li>
+       <li><a href="week3/">Week 3</a></li>
     </ul>
 </body>
 
