--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <ul>
        <li><a href="siteplan.html">Site plan</a></li>
        <li><a href="week3/">Week 3</a></li>
-       <li><a href="week/4"></a>Week 4</li>
+       <li><a href="week4/"></a>Week 4</li>
     </ul>
 </body>
 
