--- a/week3/index.html
+++ b/week3/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="logo image">
             <picture>
-                <img src="rafinlogo.png" alt="Rafting Logo" />
+                <img src="images/rafinglogo.png" alt="Rafting Logo" />
             </picture>
         </div>
         <nav>
