--- a/rafting/css/index.html
+++ b/rafting/css/index.html
@@ -34,20 +34,15 @@
         <h1>Dry Oar Rafting Adventure</h1>
         <div class="river pic">
             <picture>
-                <img src="https://placekitten.com/960/200" alt="Placeholder image" />
+                <img src="images/rafting.jpg" alt="Placeholder image">
             </picture>
             </div>
+            
             <section>
-                <h1>Title</h1>
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua.
-                    <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    commodo consequat.
-                    <br> aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident,
-                    <br> sunt in culpa qui officia deserunt mollit anim id est laborum."
+                <h1>Adventure is Waiting!</h1>
+                <p class="adventure"> Take a break, go rafting with friends. <br> A variety of watercraft is waiting for you, each delivering a unique and memorable experience. <br> Adventure + comfy catered camping under star-filled skies = best vacation ever.
                 </p>
-                <img src="https://placekitten.com/300/200" alt="Placeholder image" />
+                <img src="images/pexels-rachel-claire-7276651.jpg" style="width: 500px;" alt="Placeholder image" />
             </section>
             <section>
                 <h2>Title</h2>
@@ -72,7 +67,7 @@
 
     <footer>
         <div>
-            <p>© 2022 Ariana Manley WDD130 - Ariana Manley - WDD130</p>
+            <p>© 2022 Dry Oar - Ariana Manley - WDD130</p>
         </div>
         <div>
             <a href="https://facebook.com>"> <img src="images/317727_facebook_social media_social_icon.png" style="width:50px;height:50px;"> 
