--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
        <li><a href="siteplan.html">Site plan</a></li>
        <li><a href="week3/">Week 3</a></li>
        <li><a href="week4/"></a>Week 4</li>
+       <li><a href="rafting/"></a>Week 4</li>
     </ul>
 </body>
 
