--- a/rafting/css/index.html
+++ b/rafting/css/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="logo image">
             <picture>
-                <img src="/images/rafinglogo.png" style="width: 100px;" alt="Rafting Logo">
+                <img src="images/rafinglogo.png" style="width: 100px;" alt="Rafting Logo">
             </picture>
         </div>
         <nav>
@@ -54,7 +54,7 @@
                     pariatur. Excepteur sint occaecat cupidatat non proident,
                     <br> sunt in culpa qui officia deserunt mollit anim id est laborum."
                 </p>
-                
+
                 <img src="images/pexels-rachel-claire-5531595.jpg" style="width: 500px;" alt="" />
             </section>
             <section>
