--- a/rafting/css/index.html
+++ b/rafting/css/index.html
@@ -19,7 +19,7 @@
         <header>
 
             <picture>
-                <img src="images/rafinglogo.png" style="width: 100px;" alt="Rafting Logo">
+                <img src="images/rafinglogo.png" width= "100" alt="Rafting Logo">
             </picture>
             <h1>Dry Oar Rafting Adventure</h1>
 
