--- a/week 7/index.html
+++ b/week 7/index.html
@@ -19,12 +19,12 @@
         <header>
 
             <picture>
-                <img src="images/rafinglogo.png" style="width: 100px;" alt="Rafting Logo">
+                <img src="images/rafinglogo.png" width= "100" alt="Rafting Logo">
             </picture>
             <h1>Dry Oar Rafting Adventure</h1>
 
             <nav>
-              
+
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="products.html">About Us</a></li>
@@ -38,8 +38,8 @@
         <main>
             <div class="river pic">
                 <picture>
-                    <img src="images/pexels-rachel-claire-5531629(1).jpg" style="width: 960px; height: 400px;"
-                        alt="Placeholder image">
+                    <img src="images/raftingboats.jpg" width="960" height="500"
+                        alt="Landscape with kayaks on the river bank">
                 </picture>
             </div>
 
@@ -49,7 +49,7 @@
                     you, each delivering a unique and memorable experience. <br> Adventure + comfy catered camping under
                     star-filled skies = best vacation ever.
                 </p>
-                <img src="images/pexels-rachel-claire-7276651.jpg" style="width: 500px;" alt="">
+                <img src="images/raftingingroup.jpg" width="500" alt="Group of friends">
             </section>
             <section>
                 <h2>Title</h2>
@@ -62,7 +62,7 @@
                     <br> sunt in culpa qui officia deserunt mollit anim id est laborum."
                 </p>
 
-                <img src="images/pexels-rachel-claire-5531595.jpg" style="width: 500px;" alt="" />
+                <img src="images/raftingingroup2.jpg" width="500" alt="Group of friends rafting in slow waters" />
             </section>
             <section>
                 <h3>Title</h3>
@@ -78,13 +78,12 @@
             <div class=copy id="copyright">&copy;2022 Dry Oar - Ariana Manley - WDD130</div>
 
             <div class="socialicons">
-                <a href="https://facebook.com"> <img src="images/317727_facebook_social media_social_icon.png"
-                        alt="Facebook icon" width="50"></a>
-                <a href="https://instagram.com"> <img src="images/1298747_instagram_brand_logo_socialmedia_icon.png"
-                        alt="Instagram icon" style="width:50px;height:50px;"> </a>
-                <a href="https://whatsapp.com"> <img
-                        src="images/5296520_bubble_chat_mobile_whatsapp_whatsapplogo_icon.png" alt="Whatsapp icon"
-                        style="width:50px;height:50px;"> </a>
+                <a href="https://facebook.com"> <img src="images/facebooksocialicon.png" alt="Facebook icon"
+                        width="50"></a>
+                <a href="https://instagram.com"> <img src="images/instagramsocialicon.png" alt="Instagram icon"
+                        width="50"> </a>
+                <a href="https://whatsapp.com"> <img src="images/whatsappsocialicon.png" width="50" alt="whatsapp icon">
+                </a>
 
 
             </div>
