--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <ul>
        <li><a href="siteplan.html">Site plan</a></li>
        <li><a href="week3/">Week 3</a></li>
-       <li><a href="week4/"></a>Week 4</li>
-       <li><a href="rafting/css/index.html"></a>Rafting</li>
+       <li><a href="week4/">Week 4</a></li>
+       <li><a href="rafting/css">Rafting</a></li>
     </ul>
 </body>
 
