--- a/week 7/index.html
+++ b/week 7/index.html
@@ -19,7 +19,8 @@
         <header>
 
             <picture>
-                <img src="images/rafinglogo.png" width= "100" alt="Rafting Logo">
+
+                <img src="images/rafinglogo.png" width= "100" alt="Rafting Logo" class="logo">
             </picture>
             <h1>Dry Oar Rafting Adventure</h1>
 
@@ -36,9 +37,9 @@
         </header>
 
         <main>
-            <div class="river pic">
-                <picture>
-                    <img src="images/raftingboats.jpg" width="960" height="500"
+            <div class="container">
+                <picture class="hero" >
+                    <img src="images/" width="960" 
                         alt="Landscape with kayaks on the river bank">
                 </picture>
             </div>
