--- a/week 7/index.html
+++ b/week 7/index.html
@@ -20,7 +20,7 @@
 
             <picture>
 
-                <img src="images/rafinglogo.png" width= "100" alt="Rafting Logo" class="logo">
+                <img src="images/rafinglogo.png" width="100" alt="Rafting Logo" class="logo">
             </picture>
             <h1>Dry Oar Rafting Adventure</h1>
 
@@ -37,24 +37,35 @@
         </header>
 
         <main>
-            <div class="container">
-                <picture class="hero" >
-                    <img src="images/" width="960" 
-                        alt="Landscape with kayaks on the river bank">
-                </picture>
-            </div>
+            <div class="banner">
+                <div class="banner-content">
+                    <picture class="hero">
+                        <img src="images/whitewater-rafting-tours-4.jpg" width="100%" height="400px"
+                            alt="Landscape with kayaks on the river bank">
 
-            <section>
-                <h1>Adventure is Waiting!</h1>
+                    </picture>
+                </div>
+                <div class="banner-content2">
+                    <button>
+                        <p>Book Now</p>
+                    </button>
+                </div>
+            </div>
+            <section class="area1">
+                <h1 class="area1h1">Adventure is Waiting!</h1>
                 <p class="adventure"> Take a break, go rafting with friends. <br> A variety of watercraft is waiting for
                     you, each delivering a unique and memorable experience. <br> Adventure + comfy catered camping under
                     star-filled skies = best vacation ever.
                 </p>
-                <img src="images/raftingingroup.jpg" width="500" alt="Group of friends">
+                <picture class="area1picture">
+                    <img src="images/raftingingroup.jpg" width="500" alt="Group of friends">
+                </picture>
             </section>
-            <section>
+
+            <section class="area2">
                 <h2>Title</h2>
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <p class="content2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore
                     et dolore magna aliqua.
                     <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                     commodo consequat.
@@ -62,10 +73,12 @@
                     pariatur. Excepteur sint occaecat cupidatat non proident,
                     <br> sunt in culpa qui officia deserunt mollit anim id est laborum."
                 </p>
-
-                <img src="images/raftingingroup2.jpg" width="500" alt="Group of friends rafting in slow waters" />
+                <picture class="area2picture">
+                    <img src="images/raftingingroup2.jpg" width="450" alt="Group of friends rafting in slow waters" />
+                </picture>
             </section>
-            <section>
+
+            <section class="area3">
                 <h3>Title</h3>
                 <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua.
