--- a/week 7/index.html
+++ b/week 7/index.html
@@ -44,12 +44,14 @@
                             alt="Landscape with kayaks on the river bank">
 
                     </picture>
+
+                    <section class="stats">
+                        <p> What are you waiting for?</p>
+                        <button> Book Now </button>
+
+                    </section>
                 </div>
-                <div class="banner-content2">
-                    <button>
-                        <p>Book Now</p>
-                    </button>
-                </div>
+                
             </div>
             <section class="area1">
                 <h1 class="area1h1">Adventure is Waiting!</h1>
