--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
        <li><a href="week3/">Week 3</a></li>
        <li><a href="week4/">Week 4</a></li>
        <li><a href="rafting/css">Rafting</a></li>
+       <li><a href="fp-siteplan.html">FInal Project Site Plan</a></li>
     </ul>
 </body>
 
