--- a/rafting/index.html
+++ b/rafting/index.html
@@ -40,7 +40,7 @@
             <div class="banner">
                 <div class="banner-content">
                     <picture class="hero">
-                        <img src="images/whitewater-rafting-tours-4.jpg" width="100%" height="400px"
+                        <img src="images/whitewater-rafting-tours-4.jpg" width="960" height="400"
                             alt="Landscape with kayaks on the river bank">
 
                     </picture>
