--- a/finalproject/fp-siteplan.html
+++ b/finalproject/fp-siteplan.html
@@ -48,7 +48,7 @@
         <p>
         <ul>
             <li>People who are passionate about learning ways to contribute to the caring of home earth </li>
-            <li></li>
+            <li>Someone who is newby on recyclying</li>
             <li></li>
             <li></li>
             <li></li>
@@ -85,6 +85,25 @@
         </ul>
 
         </p>
+    </section>
+
+    <section>
+        <h4>Content</h4>
+
+        <p> Why recycling is important ? Why I should recycle? <br>
+            There are many reasons why recycling is essential.
+            By improving our recycling habits, we can help keep the environment clean and preserve our natural resources.
+            Here are the benefits of recycling and how it can help the environment</p>
+
+
+            
+        <p>How can I start recyclying? How can I now what is recyclable or not?<br>
+            If you’re wondering what is recycling or how to recycle properly, check below to learn everything from
+            recycling basics.<br>
+            Learn guidelines related to recycling.</p>
+
+
+       
     </section>
 </body>
 
