--- a/rafting/index.html
+++ b/rafting/index.html
@@ -28,9 +28,9 @@
 
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="products.html">About Us</a></li>
+                    <li><a href="aboutus.html">About Us</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                   
                 </ul>
             </nav>
 
