--- a/finalproject/fp-siteplan.html
+++ b/finalproject/fp-siteplan.html
@@ -89,14 +89,14 @@
 
     <section>
         <h4>Content</h4>
-
+<h5> Importance of recycling</h5>
         <p> Why recycling is important ? Why I should recycle? <br>
             There are many reasons why recycling is essential.
             By improving our recycling habits, we can help keep the environment clean and preserve our natural resources.
             Here are the benefits of recycling and how it can help the environment</p>
 
 
-            
+<h6>How can I start recyclying?</h6>
         <p>How can I start recyclying? How can I now what is recyclable or not?<br>
             If you’re wondering what is recycling or how to recycle properly, check below to learn everything from
             recycling basics.<br>
