--- a/finalproject/fp-siteplan.html
+++ b/finalproject/fp-siteplan.html
@@ -101,9 +101,12 @@
             recycling basics.<br>
             Learn guidelines related to recycling.</p>
 
-
-       
     </section>
+<h2>Wireframes</h2>
+    <picture>
+        <img src="images/homepagewireframe.jpg" alt="Home page Wireframe and Recycling Guide Wireframe" width="700">
+        <img src="images/testimonialswireframe.jpg" alt="Testimonials Wireframe" width="700">
+    </picture>
 </body>
 
 </html>
