--- a/rafting/index.html
+++ b/rafting/index.html
@@ -54,7 +54,7 @@
                 
             </div>
             <section class="area1">
-                <h1 class="area1h1">Adventure is Waiting!</h1>
+                <h2 class="area1h1">Adventure is Waiting!</h1>
                 <p class="adventure"> Take a break, go rafting with friends. <br> A variety of watercraft is waiting for
                     you, each delivering a unique and memorable experience. <br> Adventure + comfy catered camping under
                     star-filled skies = best vacation ever.
@@ -65,7 +65,7 @@
             </section>
 
             <section class="area2">
-                <h2>Title</h2>
+                <h2 class="title2">Title</h2>
                 <p class="content2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore
                     et dolore magna aliqua.
