--- a/rafting/aboutus.html
+++ b/rafting/aboutus.html
@@ -37,13 +37,13 @@
         </header>
 
         <main>
-            
+
             <section class="pics1strow">
                 <picture>
                     <img src="images/landscape.jpg" width="350" alt="Landscape">
                 </picture>
 
-                <picture >
+                <picture>
                     <img src="images/people1.jpg" width="350" alt="People rafting in group">
                 </picture>
 
@@ -51,46 +51,44 @@
                     <img src="images/landscape2.jpg" width="350" alt="Landscape">
                 </picture>
             </section>
- 
-            <section class="pics2ndstrow">
-                <picture>
-                    <img src="images/people2.jpg" width="350" alt="People rafting in group">
-                </picture>
-
-                <picture>
-                    <img src="images/landscape3.jpg" width="350" alt="Landscape">
-                </picture>
-
-                <picture>
-                    <img src="images/people3.jpg" width="350" alt="Landscape">
-                </picture>
-            </section>
-
-            <section class="wwa">
-                <h2>Who we are?</h2>
-                <p class="infowwa">Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>
-                    Ratione ipsam expedita eveniet deleniti, incidunt tempore optio voluptatum quod debitis. <br>
-                    Eligendi iure quasi culpa dolores dicta, saepe repudiandae nam molestias eos!</p>
-            </section>
-        </main>
-
-            <footer>
-
-                <div class=copy id="copyright">&copy;2022 Dry Oar - Ariana Manley - WDD130</div>
-
-                <div class="socialicons">
-                    <a href="https://facebook.com"> <img src="images/facebooksocialicon.png" alt="Facebook icon"
-                            width="50"></a>
-                    <a href="https://instagram.com"> <img src="images/instagramsocialicon.png" alt="Instagram icon"
-                            width="50"> </a>
-                    <a href="https://whatsapp.com"> <img src="images/whatsappsocialicon.png" width="50"
-                            alt="whatsapp icon">
-                    </a>
-
-
-                </div>
-            </footer>
     </div>
-   
+    <section class="pics2ndstrow">
+        <picture>
+            <img src="images/people2.jpg" width="350" alt="People rafting in group">
+        </picture>
+
+        <picture>
+            <img src="images/landscape3.jpg" width="350" alt="Landscape">
+        </picture>
+
+        <picture>
+            <img src="images/people3.jpg" width="350" alt="Landscape">
+        </picture>
+    </section>
+
+    <section class="wwa">
+        <h2>Who we are?</h2>
+        <p class="infowwa">Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>
+            Ratione ipsam expedita eveniet deleniti, incidunt tempore optio voluptatum quod debitis. <br>
+            Eligendi iure quasi culpa dolores dicta, saepe repudiandae nam molestias eos!</p>
+    </section>
+    </main>
+
+    <footer>
+
+        <div class=copy id="copyright">&copy;2022 Dry Oar - Ariana Manley - WDD130</div>
+
+        <div class="socialicons">
+            <a href="https://facebook.com"> <img src="images/facebooksocialicon.png" alt="Facebook icon" width="50"></a>
+            <a href="https://instagram.com"> <img src="images/instagramsocialicon.png" alt="Instagram icon" width="50">
+            </a>
+            <a href="https://whatsapp.com"> <img src="images/whatsappsocialicon.png" width="50" alt="whatsapp icon">
+            </a>
+
+
+        </div>
+    </footer>
+    </div>
+
 
 </body>
