--- a/rafting/index.html
+++ b/rafting/index.html
@@ -60,20 +60,15 @@
                     star-filled skies = best vacation ever.
                 </p>
                 <picture class="area1picture">
-                    <img src="images/raftingingroup.jpg" width="500" alt="Group of friends">
+                    <img src="images/raftingingroup.jpg" width="450" alt="Group of friends">
                 </picture>
             </section>
 
             <section class="area2">
-                <h2 class="title2">Title</h2>
-                <p class="content2">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore
-                    et dolore magna aliqua.
-                    <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    commodo consequat.
-                    <br> aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident,
-                    <br> sunt in culpa qui officia deserunt mollit anim id est laborum."
+                <h2 class="title2">What are you waiting for?</h2>
+                <p class="content2">We offer  white water rafting trips down the Colorado River through the Grand Canyon in AZ <br>
+                    and calm water river trips immersing individuals, families, and groups <br>
+                    in a life-changing experience that combines nature, culture, and adventure"
                 </p>
                 <picture class="area2picture">
                     <img src="images/raftingingroup2.jpg" width="450" alt="Group of friends rafting in slow waters" />
@@ -81,11 +76,8 @@
             </section>
 
             <section class="area3">
-                <h3>Title</h3>
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua.
-                    <br> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                    commodo consequat.
+                <h3 class="title3">You are our goal</h3>
+                <p class="paragraph3">At Dry Oar Rafting Adventure, we have one goal: to provide you with the rafting experience of a lifetime.</p>
             </section>
         </main>
 
