--- a/rafting/contactus.html
+++ b/rafting/contactus.html
@@ -55,11 +55,11 @@
                 <section class="booking">
                     <h2>Want to book?</h2>
                     <form action="/action_page.php">
-                        <label for="fname">First name:</label><br>
+                        <label for="fname">Full Name:</label><br>
                         <input type="text" id="fname" name="fname"><br>
                         <label for="lname">Email Adress:</label><br>
                         <input type="text" id="lname" name="lname"><br>
-                        <label for="lname">Insert trip information(data,time,quantity):</label><br>
+                        <label for="lname">Trip information(date,time,quantity):</label><br>
                         <input type="text" id="lname" name="lname"><br><br>
                         <input type="submit" value="Send">
                         <p>You will receive and email confirmation when your booking is sucessful.</p>
