--- a/rafting/contactus.html
+++ b/rafting/contactus.html
@@ -59,8 +59,8 @@
                         <input type="text" id="fname" name="fname"><br>
                         <label for="lname">Email Adress:</label><br>
                         <input type="text" id="lname" name="lname"><br>
-                        <label for="lname">Trip information(date,time,quantity):</label><br>
-                        <input type="text" id="lname" name="lname"><br><br>
+                        <label for="tname">Trip information(date,time,quantity):</label><br>
+                        <input type="text" id="tname" name="tname"><br><br>
                         <input type="submit" value="Send">
                         <p>You will receive and email confirmation when your booking is sucessful.</p>
                     </form>
