--- a/rafting/aboutus.html
+++ b/rafting/aboutus.html
@@ -37,22 +37,21 @@
         </header>
 
         <main>
-<div class="bannercontent2">
+
             <section class="pics1strow">
                 <picture>
-                    <img src="images/landscape.jpg" width="350" alt="Landscape">
+                    <img class="aboutusimages" src="images/landscape.jpg" width="350" alt="Landscape">
                 </picture>
 
                 <picture>
-                    <img src="images/people1.jpg" width="350" alt="People rafting in group">
+                    <img class="aboutusimages"src="images/people1.jpg" width="350" alt="People rafting in group">
                 </picture>
 
                 <picture>
-                    <img src="images/landscape2.jpg" width="350" alt="Landscape">
+                    <img class="aboutusimages" src="images/landscape2.jpg" width="350" alt="Landscape">
                 </picture>
-            </section>
-        </div>
-            <section class="pics2ndstrow">
+
+
                 <picture>
                     <img src="images/people2.jpg" width="350" alt="People rafting in group">
                 </picture>
@@ -68,10 +67,12 @@
 
             <section class="wwa">
                 <h2>Who we are?</h2>
-                <p class="infowwa">Dry Oar Rafting Adventure, with over 50 years of experience as white water outfitters,<br>
-                     specializes in rafting adventures through Grand Canyon National Park.<br>
+                <p class="infowwa">Dry Oar Rafting Adventure, with over 50 years of experience as white water
+                    outfitters,<br>
+                    specializes in rafting adventures through Grand Canyon National Park.<br>
                     From our founding days, we’ve focused on ensuring an unrivaled experience for our guests.<br>
-                     We believe an adventure vacation is only as good as your guide, which is why we choose to work with the most experienced, knowledgeable and hospitable guides on the Colorado River. 
+                    We believe an adventure vacation is only as good as your guide, which is why we choose to work with
+                    the most experienced, knowledgeable and hospitable guides on the Colorado River.
             </section>
         </main>
 
