--- a/rafting/aboutus.html
+++ b/rafting/aboutus.html
@@ -44,7 +44,7 @@
                 </picture>
 
                 <picture>
-                    <img class="aboutusimages"src="images/people1.jpg" width="350" alt="People rafting in group">
+                    <img class="aboutusimages" src="images/people1.jpg" width="350" alt="People rafting in group">
                 </picture>
 
                 <picture>
@@ -53,15 +53,15 @@
 
 
                 <picture>
-                    <img src="images/people2.jpg" width="350" alt="People rafting in group">
+                    <img class="aboutusimages" src="images/people2.jpg" width="350" alt="People rafting in group">
                 </picture>
 
                 <picture>
-                    <img src="images/landscape3.jpg" width="350" alt="Landscape">
+                    <img class="aboutusimages" src="images/landscape3.jpg" width="350" alt="Landscape">
                 </picture>
 
                 <picture>
-                    <img src="images/people3.jpg" width="350" alt="Landscape">
+                    <img class="aboutusimages" src="images/people3.jpg" width="350" alt="Landscape">
                 </picture>
             </section>
 
