--- a/rafting/index.html
+++ b/rafting/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="aboutus.html">About Us</a></li>
                     <li><a href="contactus.html">Contact Us</a></li>
-                   
+
                 </ul>
             </nav>
 
@@ -51,7 +51,7 @@
 
                     </section>
                 </div>
-                
+
             </div>
             <section class="area1">
                 <h2 class="area1h1">Adventure is Waiting!</h2>
@@ -66,7 +66,8 @@
 
             <section class="area2">
                 <h2 class="title2">What are you waiting for?</h2>
-                <p class="content2">We offer  white water rafting trips down the Colorado River through the Grand Canyon in AZ <br>
+                <p class="content2">We offer white water rafting trips down the Colorado River through the Grand Canyon
+                    in AZ <br>
                     and calm water river trips immersing individuals, families, and groups <br>
                     in a life-changing experience that combines nature, culture, and adventure"
                 </p>
@@ -77,7 +78,8 @@
 
             <section class="area3">
                 <h3 class="title3">You are our goal</h3>
-                <p class="paragraph3">At Dry Oar Rafting Adventure, we have one goal: to provide you with the rafting experience of a lifetime.</p>
+                <p class="paragraph3">At Dry Oar Rafting Adventure, we have one goal: to provide you with the rafting
+                    experience of a lifetime.</p>
             </section>
         </main>
 
