--- a/lesson-11/forms.html
+++ b/lesson-11/forms.html
@@ -20,10 +20,12 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+ 
 }
 
 form li + li {
   margin-top: 1em;
+  
   
 }
 
@@ -33,6 +35,7 @@ label {
   width: 90px;
   text-align: right;
   font-size: 20px;
+  padding-bottom: 20px;
 }
 
 input,
@@ -67,6 +70,7 @@ textarea {
 
 .button {
   /* Align buttons with the text fields */
+  padding-top: 10px;
   padding-left: 155px; /* same size as the label elements */
   
 }
