--- a/lesson-11/forms.html
+++ b/lesson-11/forms.html
@@ -1,112 +1,115 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>My test page</title>
 
     <style>
-form {
-  /* Center the form on the page */
-  margin: 0 auto;
-  width: 400px;
-  /* Form outline */
-  padding: 5em;
-  border: 1px solid #CCC;
-  border-radius: 1em;
-  background-color :rgb(247, 244, 201);
-}
+        form {
+            /* Center the form on the page */
+            margin: 0 auto;
+            width: 400px;
+            /* Form outline */
+            padding: 5em;
+            border: 1px solid #CCC;
+            border-radius: 1em;
+            background-color: rgb(247, 244, 201);
+        }
 
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
- 
-}
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
 
-form li + li {
-  margin-top: 1em;
-  
-  
-}
+        }
 
-label {
-  /* Uniform size & alignment */
-  display: inline-block;
-  width: 90px;
-  text-align: right;
-  font-size: 20px;
-  padding-bottom: 20px;
-}
+        form li+li {
+            margin-top: 1em;
 
-input,
-textarea {
-  /* To make sure that all text fields have the same font settings
+
+        }
+
+        label {
+            /* Uniform size & alignment */
+            display: inline-block;
+            width: 90px;
+            text-align: right;
+            font-size: 20px;
+            padding-bottom: 20px;
+        }
+
+        input,
+        textarea {
+            /* To make sure that all text fields have the same font settings
      By default, textareas have a monospace font */
-  font: 1em sans-serif;
+            font: 1em sans-serif;
 
-  /* Uniform text field size */
-  width: 300px;
-  box-sizing: border-box;
+            /* Uniform text field size */
+            width: 300px;
+            box-sizing: border-box;
 
-  /* Match form field borders */
-  border: 1px solid #999;
+            /* Match form field borders */
+            border: 1px solid #999;
 
-  padding: 10px;
-}
+            padding: 10px;
+        }
 
-input:focus,
-textarea:focus {
-  /* Additional highlight for focused elements */
-  border-color: #000;
-}
+        input:focus,
+        textarea:focus {
+            /* Additional highlight for focused elements */
+            border-color: #000;
+        }
 
-textarea {
-  /* Align multiline text fields with their labels */
-  vertical-align: top;
+        textarea {
+            /* Align multiline text fields with their labels */
+            vertical-align: top;
 
-  /* Provide space to type some text */
-  height: 5em;
-}
+            /* Provide space to type some text */
+            height: 5em;
+        }
 
-.button {
-  /* Align buttons with the text fields */
-  padding-top: 10px;
-  padding-left: 155px; /* same size as the label elements */
-  
-}
+        .button {
+            /* Align buttons with the text fields */
+            padding-top: 10px;
+            padding-left: 155px;
+            /* same size as the label elements */
 
-button {
-  /* This extra margin represent roughly the same space as the space
+        }
+
+        button {
+            /* This extra margin represent roughly the same space as the space
      between the labels and their text fields */
-  margin-left: .5em;
-  font-size: 18px;
-  background-color:rgb(243, 171, 77);
-}
-
+            margin-left: .5em;
+            font-size: 18px;
+            background-color: rgb(243, 171, 77);
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
 
     <form action="/my-handling-form-page" method="post">
-<ul>
-    <li class="name">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="user_name" required>
-    </li>
-    <li>
-        <label for="mail">E-mail:</label>
-        <input type="email" id="mail" name="user_email" required>
-    </li>
-    <li>
-        <label for="msg">Message:</label>
-        <textarea required id="msg" name="user_message"></textarea>
-    </li>
-    <li class="button">
-        <button type="submit">Send your message</button>
-      </li>
-      
-</ul>
+        <ul>
+            <li class="name">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="user_name" required>
+            </li>
+            <li>
+                <label for="mail">E-mail:</label>
+                <input type="email" id="mail" name="user_email" required>
+            </li>
+            <li>
+                <label for="msg">Message:</label>
+                <textarea required id="msg" name="user_message"></textarea>
+            </li>
+            <li class="button">
+                <button type="submit">Send your message</button>
+            </li>
+
+        </ul>
     </form>
-   
-  </body>
+
+</body>
+
 </html>
