--- a/finalproject/fp-siteplan.html
+++ b/finalproject/fp-siteplan.html
@@ -49,8 +49,8 @@
         <ul>
             <li>People who are passionate about learning ways to contribute to the caring of home earth </li>
             <li>Someone who is newby on recyclying</li>
-         
-           
+
+
         </ul>
         </p>
     </section>
@@ -88,21 +88,22 @@
 
     <section>
         <h4>Content</h4>
-<h5> Importance of recycling</h5>
+        <h5> Importance of recycling</h5>
         <p> Why recycling is important ? Why I should recycle? <br>
             There are many reasons why recycling is essential.
-            By improving our recycling habits, we can help keep the environment clean and preserve our natural resources.
+            By improving our recycling habits, we can help keep the environment clean and preserve our natural
+            resources.
             Here are the benefits of recycling and how it can help the environment</p>
 
 
-<h6>How can I start recyclying?</h6>
+        <h6>How can I start recyclying?</h6>
         <p>How can I start recyclying? How can I now what is recyclable or not?<br>
             If you’re wondering what is recycling or how to recycle properly, check below to learn everything from
             recycling basics.<br>
             Learn guidelines related to recycling.</p>
 
     </section>
-<h2>Wireframes</h2>
+    <h2>Wireframes</h2>
     <picture>
         <img src="images/homepagewireframe.jpg" alt="Home page Wireframe and Recycling Guide Wireframe" width="700">
         <img src="images/testimonialswireframe.jpg" alt="Testimonials Wireframe" width="700">
