--- a/finalwebsiteproject.html/recyclingguide.html
+++ b/finalwebsiteproject.html/recyclingguide.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Are you new in the world of recycling? Confused were to start? Click here we can help you get started.">
 
     <title>Green Life</title>
 
@@ -57,7 +57,7 @@
             <section class="acceptedonbin">
 
                 <section class="bottle">
-                    <img src="images/bottle.jpg" alt="plastic bottle" width="250">
+                    <img src="images/bottle.jpg" alt="plasticbottle" width="250">
                     <h2 class="hacceptedbin">Plastic Bottles and Containers</h2>
                     <p class="paccepttedbin">Recycle plastics by shape: bottles, jars, jugs and tubs.</p>
                 </section>
@@ -102,7 +102,7 @@
             <section class="acceptedonbin">
 
                 <section class="plasticwrap">
-                    <img src="images/plastic wrap.jpg" alt="plastic bottle" width="257">
+                    <img src="images/plasticwrap.jpg" alt="plastic bottle" width="257">
                     <h2 class="hacceptedbin">Plastic Wrap and Film</h2>
                     <p class="paccepttedbin">Plastic wrap, bubble wrap, sandwich bags and freezer bags should not go in
                         the recycle bin.</p>
@@ -118,95 +118,33 @@
                 <section class="bag">
                     <img src="images/bag.jpg" alt="plastic bottle" width="263">
                     <h2 class="hacceptedbin">Plastic Bags</h2>
-                    <p class="paccepttedbin">They get tangled in equipment and threaten worker safety.Reuse plastic bags.</p>
+                    <p class="paccepttedbin">They get tangled in equipment and threaten worker safety.Reuse plastic
+                        bags.</p>
                 </section>
 
                 <section class="cupswax">
                     <img src="images/cupps.jpg" alt="plastic bottle" width="257" height="197">
                     <h2 class="hacceptedbin">Cups with Wax or Plastic Coatings</h2>
-                    <p class="paccepttedbin">Cups with plastic or waxed coatings are not recyclable.Invest in and carry a reusable cup instead.</p>
+                    <p class="paccepttedbin">Cups with plastic or waxed coatings are not recyclable.Invest in and carry
+                        a reusable cup instead.</p>
                 </section>
 
                 <section class="medicalwaste">
                     <img src="images/medicalwaste.jpg" alt="plastic bottle" width="255" height="197">
                     <h2 class="hacceptedbin">Medical Waste</h2>
-                    <p class="paccepttedbin">Medical waste can pose a safety hazard and never goes in curbside recycling or waste bins.</p>
+                    <p class="paccepttedbin">Medical waste can pose a safety hazard and never goes in curbside recycling
+                        or waste bins.</p>
                 </section>
 
                 <section class="garagewaste">
                     <img src="images/garagewaste.jpeg" alt="plastic bottle" width="263">
                     <h2 class="hacceptedbin">Garage Waste</h2>
-                    <p class="paccepttedbin"> Car parts, scrap metal, tires, filters, propane cylinders and the like are safety hazards if put in curbside recycling or trash bins.</p>
+                    <p class="paccepttedbin"> Car parts, scrap metal, tires, filters, propane cylinders and the like are
+                        safety hazards if put in curbside recycling or trash bins.</p>
                 </section>
 
             </section>
         </main>
-
-        <footer>
-            <div class=copy id="copyright">&copy;2022 Green Life - Ariana Manley - WDD130</div>
-
-            <div class="socialicons">
-                <a href="https://facebook.com"> <img src="images/faceicon.png" alt="Facebook icon" width="60"></a>
-                <a href="https://instagram.com"> <img src="images/instaicon.png" alt="Instagram icon" width="60"> </a>
-                <a href="https://whatsapp.com"> <img src="images/whatsicon.png" width="60" alt="whatsapp icon">
-                </a>
-
-
-            </div>
-        </footer>
-    </div>
-</body>
-
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         <footer>
             <div class=copy id="copyright">&copy;2022 Green Life - Ariana Manley - WDD130</div>
