--- a/finalwebsiteproject/homepage.html
+++ b/finalwebsiteproject/homepage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Are you new in the world of recycling? Confused were to start? Click here we can help you get started">
+    <meta name="description" content="Are you new in the world of recycling? Confused were to start? Click here we can help you get started.">
 
     <title>Green Life</title>
 
